# clarc

./: .dockerignore  .gitignore  CLAUDE.md  DATAFORMAT.md  Dockerfile  Dockerfile.tauri  LICENSE  Makefile  README.md  docker-compose.yml  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: DEV_GUIDE.md  TAURI_PLAN.md  USER_GUIDE.md  V0.2_PLAN.md  changelog_20260224_124701.md  changelog_20260224_162120.md  changelog_20260224_164647.md  changelog_20260224_180921.md  changelog_20260224_200000.md  changelog_20260224_210000.md  changelog_20260225_010000.md  changelog_20260225_020000.md  changelog_20260225_214032.md  changelog_20260225_222125.md  changelog_20260226_035556.md  changelog_20260226_042709.md  changelog_20260226_170301.md  changelog_20260226_170441.md  changelog_20260226_174022.md  changelog_20260227_045656.md  changelog_20260227_061034.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/loading/: index.html
src-tauri/src/: lib.rs  main.rs
src/cli/: index.ts  main.ts
src/data/: parser.ts  scanner.ts  stats.ts  sync-scheduler.ts  sync.ts  tasks.ts
src/server/: index.ts
src/server/routes/: analytics.ts  export.ts  projects.ts  search.ts  sessions.ts  sync.ts  system.ts  tasks.ts
src/shared/: config.ts  paths.ts  pricing.ts  types.ts  wsl-detect.ts
src/ui/: App.tsx
src/ui/components/: Badge.tsx  ChartCard.tsx  CodeBlock.tsx  CollapsibleContent.tsx  ContextPanel.tsx  ContextPanelProvider.tsx  ConversationTurn.tsx  EmptyState.tsx  Icons.tsx  KeyboardShortcuts.tsx  (+12 more)
(+15 files in other folders)
