[package]
name = "clarc"
version = "0.2.0"
description = "clarc — local Claude Code history browser"
authors = ["J2WW Holdings"]
edition = "2021"

[lib]
name = "clarc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
portpicker = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
